VR: Fix startup race incorrectly setting insecure origin.

Bug: 753928
Change-Id: I86da5ea764e09d601846e297b029a69946ba63cb